# AI-document-checker

./: .env.copy  .gitignore  README.md  ai_agent.py  assessment.json  llm_cache.json  main.py  pyproject.toml  pytest.ini  utils.py
assessment_collection/: analyze.bru  bruno.json  correct.bru  download_corrected.bru  files-list.bru
tests/: test_integration_main.py  test_unit_ai_agent.py  test_unit_utils.py
